fix navbar clipping in venue page

--- a/src/components/Venue/Venue.module.scss
+++ b/src/components/Venue/Venue.module.scss
@@ -6,7 +6,8 @@
   height: 100%;
   width: 100%;
   overflow-y: scroll;
-  padding: 70px 80px 40px 80px;
+  margin-top: 100px;
+  padding: 20px 80px 100px;
 
   @media (max-width: 768px) {
     padding-left: 20px;
